fixxed profile sectiion alignment with margin

--- a/source/client/src/components/Sidebar/Sidebar.css
+++ b/source/client/src/components/Sidebar/Sidebar.css
@@ -49,7 +49,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
+  margin: 60px auto;
 }
 
 .profile_container {
